# watchguard

./: Cargo.toml  LICENSE  README.md  build.rs  watchguard.spec
docs/: README_BUILD.md
packaging/: config.toml  watchguard.8  watchguard.service
src/: actions.rs  cli.rs  config.rs  daemon.rs  doctor.rs  logs.rs  main.rs  plugin.rs  plugins_cmd.rs  registry.rs  state.rs  status.rs  testcmd.rs  util.rs  version.rs
src/plugins/: dns.rs  mod.rs  network.rs  oom.rs  ssh.rs
